@@ -1,0 +1,4 @@
+# Fotos de locomotoras
+
+Dejar en esta carpeta fotos con nombre id_de_locomotora.jpg, de tamaño 96x96 pixels.
+
