@@ -456,4 +456,5 @@
 18 de marzo de 2017
 
 - maqueta, chips_maqueta: Permitir configurar la duración del pulso de los desvíos. Fix #3
+- newlayout: Soporte para fotos de locomotoras. Fix #4
 
